fix(security): CVE-2019-10744
src < https://github.com/lodash/lodash/pull/4336 >

--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "ts-node": "~8.1.0",
     "tslint": "~5.16.0",
     "typescript": "~3.1.1"
+  },
+  "resolutions": {
+    "tar": ">=4.4.2",
+    "lodash": ">=4.17.13"
   }
 }
